--- a/assets/styles/_includes/variables.scss
+++ b/assets/styles/_includes/variables.scss
@@ -11,3 +11,13 @@
   font-weight: normal;
   font-style: normal;
 }
+
+$primary-color: #F4EAE9FF;
+$secondary-color: #D1A8A5FF;
+$white-color: #FFFFFF;
+$black-color: #323743FF;
+$font-title: 'raleway', sans-serif;
+$font-text: 'lato', sans-serif;
+$border-radius: 4px;
+
+
