added button style

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,11 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-test
+    <div class="pt-5">
+        <button>Classique</button>
+        <button class="pf-navbutton">Nav Button</button>
+        <button class="pf-button-edit">Modifier</button>
+        <button class="pf-button-delete">Supprimer</button>
+    </div>
+
 {% endblock %}
