--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,3 +5,14 @@ $primary: darken(#428bca, 20%);
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
+@import "_includes/variables.scss";
+@import "_includes/button.scss";
+
+* {
+    background-color: $white-color;
+    color: $black-color;
+    font-family: $font-text;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
