--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,12 +1,13 @@
 // assets/styles/global.scss
 
 // customize some Bootstrap variables
-$primary: darken(#428bca, 20%);
+$primary: #D1A8A5FF;
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
 @import "_includes/variables.scss";
 @import "_includes/button.scss";
+@import "_includes/form.scss";
 
 * {
     background-color: $white-color;
