--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,11 +3,18 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    <div class="pt-5">
+    <div class="p-5">
         <button>Classique</button>
         <button class="pf-navbutton">Nav Button</button>
         <button class="pf-button-edit">Modifier</button>
         <button class="pf-button-delete">Supprimer</button>
+    </div>
+    <div>
+        <form>
+            <label class="form-label">Adresse mail</label>
+            <input class="form-control" type="text">
+        </form>
+
     </div>
 
 {% endblock %}
