changed homepage title

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %} {{ parent() }} - Bienvenue sur mon portfolio !{% endblock %}
 
 {% block body %}
     <div class="p-5">
