--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,6 +8,7 @@ $primary: #D1A8A5FF;
 @import "_includes/variables.scss";
 @import "_includes/button.scss";
 @import "_includes/form.scss";
+@import "_includes/title.scss";
 
 * {
     background-color: $white-color;
