--- a/assets/styles/_includes/button.scss
+++ b/assets/styles/_includes/button.scss
@@ -1,17 +1,20 @@
-button {
+button, .pf-button {
   background-color: $primary-color;
   border-radius: $border-radius;
   border: solid 1px $primary-color;
   padding: 0 12px;
+  color: $black-color;
 }
 
 .pf-navbutton {
   padding: 8px 20px;
+  border: solid 1px $secondary-color;
 }
 
-button:hover {
+button:hover, .pf-button:hover, .pf-navbutton:hover {
   background-color: $secondary-color;
   border: solid 1px $secondary-color;
+  color: $white-color;
 }
 
 .pf-button-edit {
