--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,18 +3,8 @@
 {% block title %} {{ parent() }} - Bienvenue sur mon portfolio !{% endblock %}
 
 {% block body %}
-    <div class="p-5">
-        <button>Classique</button>
-        <button class="pf-navbutton">Nav Button</button>
-        <button class="pf-button-edit">Modifier</button>
-        <button class="pf-button-delete">Supprimer</button>
+    <div class="pf-pink-right">
+        {% include '_includes/navbar.html.twig' %}
+        {% include '_includes/welcome.html.twig'%}
     </div>
-    <div>
-        <form>
-            <label class="form-label">Adresse mail</label>
-            <input class="form-control" type="text">
-        </form>
-
-    </div>
-
 {% endblock %}
