--- a/assets/styles/_includes/title.scss
+++ b/assets/styles/_includes/title.scss
@@ -8,3 +8,10 @@ h1 {
   width: 25rem;
   text-align: initial;
 }
+
+h2 {
+  font-family: $font-title;
+  font-weight: 700;
+  font-size: 4rem;
+  padding: 4rem 0 2rem 0;
+}
