added my project section

--- a/assets/styles/_includes/button.scss
+++ b/assets/styles/_includes/button.scss
@@ -2,7 +2,7 @@ button, .pf-button {
   background-color: $primary-color;
   border-radius: $border-radius;
   border: solid 1px $primary-color;
-  padding: 0 12px;
+  padding: 4px 12px;
   color: $black-color;
 }
 
