--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,4 +10,7 @@
     <div class="pf-pink-top">
         {% include '_includes/my_history.html.twig' %}
     </div>
+    <div class="pf-pink-all">
+        {% include '_includes/my_project.html.twig' %}
+    </div>
 {% endblock %}
