--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,4 +13,7 @@
     <div class="pf-pink-all">
         {% include '_includes/my_project.html.twig' %}
     </div>
+    <div class="pf-pink-bottom">
+        {% include '_includes/contact.html.twig' %}
+    </div>
 {% endblock %}
