--- a/templates/_includes/my_history.html.twig
+++ b/templates/_includes/my_history.html.twig
@@ -1,4 +1,4 @@
-<h2>Mon Histoire</h2>
+<h2 id="history">Mon Histoire</h2>
 <div class="pf-history">
     <div class="pf-mgen">
         <img class="pf-logo" src="{{ asset('build/images/mgen-logo.jpg')  }}" alt="Logo de la Mutulle Générale de l'Enseignement National">
