--- a/templates/_includes/welcome.html.twig
+++ b/templates/_includes/welcome.html.twig
@@ -6,7 +6,7 @@
     <img class="pf-img-rounded" src="https://placehold.co/400x450" alt=""/>
 </div>
 <nav class="text-center align-items-end">
-    <a class="pf-button pf-navbutton" href="#">Mon Histoire</a>
-    <a class="pf-button pf-navbutton" href="#">Mes Projets</a>
-    <a class="pf-button pf-navbutton" href="#">Me Contacter</a>
+    <a class="pf-button pf-navbutton" href="#history">Mon Histoire</a>
+    <a class="pf-button pf-navbutton" href="#project">Mes Projets</a>
+    <a class="pf-button pf-navbutton" href="#contact">Me Contacter</a>
 </nav>
