--- a/templates/_includes/my_project.html.twig
+++ b/templates/_includes/my_project.html.twig
@@ -1,4 +1,4 @@
-<h2>Mes Projets</h2>
+<h2 id="project">Mes Projets</h2>
 <div class="pf-box-projects">
     {% for project in projects %}
         <div class="card">
