--- a/templates/_includes/my_project.html.twig
+++ b/templates/_includes/my_project.html.twig
@@ -1,5 +1,5 @@
 <h2 id="project">Mes Projets</h2>
-<div class="pf-box-projects">
+<div class="pf-box-projects justify-content-center">
     {% for project in projects %}
         <div class="card">
             <img src="https://placehold.co/600x400" class="card-img-top" alt="Page d'accueil du projet {{ project.name }}">
