--- a/assets/styles/_includes/home.scss
+++ b/assets/styles/_includes/home.scss
@@ -3,7 +3,6 @@
 .pf-pink-bottom {
   height: 100vh;
   background-image: -webkit-linear-gradient(115deg, #F4EAE9 50%, #ffffff 50%);
-  padding: 0 4rem;
 }
 
 .pf-pink-top {
@@ -87,6 +86,10 @@
 /* End my projects section */
 
 /* Contact section */
+
+.pf-contact {
+  padding: 0 4rem;
+}
 
 svg {
   width: 4rem;
