--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,5 +15,6 @@
     </div>
     <div class="pf-pink-bottom">
         {% include '_includes/contact.html.twig' %}
+        {% include '_includes/footer.html.Twig' %}
     </div>
 {% endblock %}
