--- a/templates/_includes/welcome.html.twig
+++ b/templates/_includes/welcome.html.twig
@@ -5,7 +5,7 @@
     <h1 class="pf-welcome">Bienvenue sur mon portfolio !</h1>
     <img class="pf-img-rounded" src="https://placehold.co/400x450" alt=""/>
 </div>
-<nav class="text-center align-items-end">
+<nav class="pf-nav text-center align-items-md-end">
     <a class="pf-button pf-navbutton" href="#history">Mon Histoire</a>
     <a class="pf-button pf-navbutton" href="#project">Mes Projets</a>
     <a class="pf-button pf-navbutton" href="#contact">Me Contacter</a>
