--- a/assets/styles/_includes/title.scss
+++ b/assets/styles/_includes/title.scss
@@ -15,3 +15,15 @@ h2 {
   font-size: 4rem;
   padding: 4rem 0 2rem 0;
 }
+
+@media screen and (max-width:769px) {
+  .pf-welcome {
+    width: 18rem;
+    text-align: center;
+  }
+
+  h2 {
+    font-size: 2rem;
+    padding: 2rem 0 1.5rem 0;
+  }
+}
