--- a/templates/_includes/footer.html.twig
+++ b/templates/_includes/footer.html.twig
@@ -1,8 +1,8 @@
-<footer class="d-flex">
-    <p class="col-2 offset-5 text-center">Aline LEGENDRE © 2023</p>
-    <ul class="col-5 d-flex justify-content-center">
-        <li class="px-3"><a href="#">Mentions Légales</a></li>
-        <li class="px-3"><a href="#">Politique de Confidentialités</a></li>
-        <li class="px-3"><a href="#">Plan du Site</a></li>
+<footer class="d-md-flex">
+    <p class="col-md-2 offset-md-5 text-center">Aline LEGENDRE © 2023</p>
+    <ul class="col-md-5 d-md-flex justify-content-center">
+        <li class="px-md-3"><a href="#">Mentions Légales</a></li>
+        <li class="px-md-3"><a href="#">Politique de Confidentialités</a></li>
+        <li class="px-md-3"><a href="#">Plan du Site</a></li>
     </ul>
 </footer>
