--- a/assets/styles/_includes/home.scss
+++ b/assets/styles/_includes/home.scss
@@ -95,7 +95,11 @@ svg {
   width: 4rem;
   height: 4rem;
   fill: currentColor;
-  margin-bottom: 2rem;
+  margin: 1rem 0 2rem 0;
+}
+
+.pf-arrow {
+  margin-top: 3rem;
 }
 
 /* End contact section */
