--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,6 +5,13 @@
 {% block body %}
     <div class="pf-pink-bottom">
         {% include '_includes/navbar.html.twig' %}
+        {% for category, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="text-center alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
         {% include '_includes/welcome.html.twig'%}
     </div>
     <div class="pf-pink-top">
