added responsive tel style

--- a/assets/styles/_includes/home.scss
+++ b/assets/styles/_includes/home.scss
@@ -185,6 +185,25 @@ svg {
 
   /* End my projects section */
 
+  /* Contact section */
+
+  svg {
+    width: 2rem;
+    height: 2rem;
+    margin: 2rem;
+  }
+
+  .pf-icon {
+    text-align: center;
+  }
+
+  .pf-arrow {
+    margin-top: 0;
+  }
+
+
+  /* End contact section */
+
 }
 
 /* End responsive */
