added link from home page to project page

--- a/templates/_includes/my_project.html.twig
+++ b/templates/_includes/my_project.html.twig
@@ -13,7 +13,7 @@
                     {% endfor %}
                 </p>
                 <div class=text-center>
-                    <a class="pf-button" href="#">Voir plus</a>
+                    <a class="pf-button" href="{{ path('app_projects_show', {'id': project.id}) }}">Voir plus</a>
                 </div>
             </div>
         </div>
