--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -11,6 +11,7 @@ $primary: #D1A8A5FF;
 @import "_includes/title.scss";
 @import "_includes/home.scss";
 @import "_includes/footer.scss";
+@import "_includes/project.scss";
 
 * {
     color: $black-color;
