--- a/templates/projects/show.html.twig
+++ b/templates/projects/show.html.twig
@@ -1,34 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Projects{% endblock %}
+{% block title %}{{ parent() }} - projet {{ project.name }}{% endblock %}
 
 {% block body %}
-    <h1>Projects</h1>
+    <div class="pf-bg-project">
+    {% include '_includes/navbar.html.twig' %}
+        <div class="pf-container d-md-flex justify-content-md-between">
+            <div class="pf-contain pf-contain1">
+                <h2 class="pf-h2-project">{{ project.name }}</h2>
+                <p>{{ project.description }}</p>
+                <div>
+                    <p>Les technologies utilisées :</p>
+                    <ul>
+                    {% for skill in project.skills %}
+                        <li>{{ skill.name }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <div class="pf-contain text-md-end text-center">
+                <img class="pf-image1" src="{{ mainPicture.file }}" alt=""/>
+            </div>
+        </div>
+        {% if pictures is not empty %}
+            <div class="pf-images d-flex justify-content-evenly">
+                {% for picture in pictures %}
+                    <div>
+                        <h3>{{ picture.name }}</h3>
+                        <img class="pf-image2 d-flex" src="{{ picture.file }}" alt=""/>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ project.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ project.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ project.description }}</td>
-            </tr>
-            <tr>
-                <th>Color</th>
-                <td>{{ project.color }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_projects_index') }}">back to list</a>
-
-    <a href="{{ path('app_projects_edit', {'id': project.id}) }}">edit</a>
-
-    {{ include('projects/_delete_form.html.twig') }}
+    {{ include('_includes/footer.html.twig') }}
 {% endblock %}
