added cv upload

--- a/templates/_includes/welcome.html.twig
+++ b/templates/_includes/welcome.html.twig
@@ -1,5 +1,5 @@
 <div class="text-center">
-    <button>Télécharger mon CV</button>
+    <a class="pf-button" href="{{ asset('build/resume/CV-AlineLEGENDRE-DeveloppeuseWeb.pdf') }}" download="CV-AlineLEGENDRE-DeveloppeuseWeb">Télécharger mon CV</a>
 </div>
 <div class="d-flex justify-content-evenly align-items-center pf-welcome-width">
     <h1 class="pf-welcome">Bienvenue sur mon portfolio !</h1>
