--- a/assets/styles/_includes/title.scss
+++ b/assets/styles/_includes/title.scss
@@ -27,6 +27,10 @@ h3 {
   padding: 2rem 0 1rem 0;
 }
 
+.pf-h3-admin {
+  padding: 1rem 0 0 0;
+}
+
 @media screen and (max-width:769px) {
   .pf-welcome {
     width: 18rem;
