added form project style

--- a/assets/styles/_includes/button.scss
+++ b/assets/styles/_includes/button.scss
@@ -46,5 +46,9 @@ button:hover, .pf-button:hover, .pf-navbutton:hover, .pf-button-admin:hover {
   text-decoration: underline;
 }
 
+.pf-button-delete:hover {
+  color: darkred;
+}
+
 
 
