--- a/assets/styles/_includes/form.scss
+++ b/assets/styles/_includes/form.scss
@@ -21,3 +21,20 @@ form input {
 textarea {
   resize: none;
 }
+
+.pf-card-form {
+  margin: 4rem auto;
+  width: 60%;
+  border-radius: $border-radius;
+  border: 1px solid $secondary-color;
+}
+
+.pf-card-form h2 {
+  font-size: 2rem;
+  text-align: center;
+  padding: 2rem 0;
+}
+
+.pf-box-skills label {
+  margin-right: 1rem;
+}
