--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,6 +2,7 @@
 
 // customize some Bootstrap variables
 $primary: #D1A8A5FF;
+$border-color: #D1A8A5FF;
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
