--- a/assets/styles/_includes/footer.scss
+++ b/assets/styles/_includes/footer.scss
@@ -5,9 +5,10 @@ body {
 
 footer {
   position: absolute;
-  bottom: 0;
+  bottom: 2rem;
   left: 0;
   right: 0;
+  height: 0;
 }
 
 @media screen and (max-width:769px) {
