added project anchor for back button

--- a/templates/projects/show.html.twig
+++ b/templates/projects/show.html.twig
@@ -6,7 +6,7 @@
     <div class="pf-bg-project">
     {% include '_includes/navbar.html.twig' %}
         <div class="pf-btn-return">
-            <a class="pf-button" href="{{ path('app_home') }}">Retour</a>
+            <a class="pf-button" href="{{ path('app_home') }}#project">Retour</a>
         </div>
         <div class="pf-container d-md-flex justify-content-md-between">
             <div class="pf-contain pf-contain1">
